--- a/index.html
+++ b/index.html
@@ -113,10 +113,39 @@
         </div>
       </section>
       <!-- MAKE APPOINTMENT BOX SECTION ENDS -->
-
     </section>
     <!-- SERVICE SECTION PART ENDS -->
 
+    <section class="blog-sec">
+      <h1>
+        <span>Blog</span> & News From Us!
+      </h1>
+      <p>
+        Sint nascetur facere, delectus conubia consequuntur, nonummy distinctio! Non officiis, id natus non nisl
+        provident
+        justo.
+      </p>
+      <div class="blogbox-container">
+        <div class="blog-box">
+          <img src="image/blog-1.jpg" alt="">
+          <h4>Maxime rhoncus aliquet sint eu accusantium illum.</h4>
+          <p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis,
+            nascetur?.....</p>
+        </div>
+        <div class="blog-box">
+          <img src="image/blog-2.jpg" alt="">
+          <h4>Maxime rhoncus aliquet sint eu accusantium illum.</h4>
+          <p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis,
+            nascetur?.....</p>
+        </div>
+        <div class="blog-box">
+          <img src="image/blog-3.jpg" alt="">
+          <h4>Maxime rhoncus aliquet sint eu accusantium illum.</h4>
+          <p>Malesuada error laudantium quibusdam, voluptas recusandae, corporis nec, metus numquam, facilis,
+            nascetur?.....</p>
+        </div>
+      </div>
+    </section>
 
   </main>
 
