--- a/index.html
+++ b/index.html
@@ -146,12 +146,80 @@
         </div>
       </div>
     </section>
-
   </main>
 
-
   <footer>
+    <div class="foot-items">
+      <div class="foot-col1">
+        <img src="logo/logo.png" alt="">
+        <p>
+          Auctor blandit dolorem primis eius odit <br> soluta molestie? Malesuada elementum <br> aut doloremque labo.
+        </p>
+        <div class="foot-icons">
+          <img src="icons/fb.png" alt="">
+          <img src="icons/insta.png" alt="">
+          <img src="icons/twitter.png" alt="">
+          <img src="icons/youtube.png" alt="">
+        </div>
+      </div>
+      <div class="foot-col2">
+        <h4>
+          Useful Links
+        </h4>
+        <p>
+          About us
+        </p>
+        <p>
+          Careers
+        </p>
+        <p>
+          News & Artciles
+        </p>
+        <p>
+          legal Notice
+        </p>
+      </div>
+      <div class="foot-col3">
+        <h4>
+          Supports
+        </h4>
+        <p>
+          Help Center
+        </p>
+        <p>
+          Contact Us
+        </p>
+        <p>
+          FAQ
+        </p>
+        <p>
+          Parent Community
+        </p>
 
+      </div>
+      <div class="foot-col4">
+        <h4>
+          Useful Links
+        </h4>
+        <p>
+          Feel free to contact & reach us !!
+        </p>
+        <p>
+          3557 Derek Drive, Orlando, Florida
+        </p>
+        <p>
+          +1(456)657-887
+        </p>
+        <p>
+          info@domain.com
+        </p>
+      </div>
+    </div>
+    <br><br><br><br><br><br><br>
+    <hr>
+    <p class="footer-foot">
+      <small>Copyright © 2022 Agence. All rights reserved.</small>
+    </p>
   </footer>
 </body>
 
