--- a/index.html
+++ b/index.html
@@ -61,13 +61,12 @@
           </ol>
 
           <div class="author-and-btn">
-            <div class="author-details">
+            <div class="author-details  hr-border">
               <img width="50px" src="image/author.jpg" alt="">
               <p>George Smith <br> CEO, Director </p>
             </div>
-            <hr>
-            <div>
 
+            <div>
               <button>More Details</button>
             </div>
           </div>
